# voice-platform-FastAPI

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: language_service.py  main.py  routers.py  schemas.py
baml_src/: clients.baml  detect_language.baml  generators.baml
tests/: conftest.py  test_all.py
